fit: add section one and comments

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 <body>
 
+    <!-- SECTION HEADER -->
+
     <header>
         <div class="container">
             <div class="row d-flex justify-content-between">
@@ -32,11 +34,47 @@
                         <div class="col-3 text-center p-4 fw-bolder">ABOUT</div>
                         <div class="col-3 text-center p-4 fw-bolder">CONTACT</div>
                     </div>
+                </div> 
+            </div>
+        </div>  
+    </header>
+
+    <!-- // SECTION HEADER // -->
+
+    <main>
+    <!-- SECTION START BOOTSTRAP -->
+       <section class="green">
+        <div class="container-md">
+            <div class="row d-flex justify-content-center">
+                <img class="col-2 p-4" src="./assets/img/avatar.svg" alt="avatar">
+            </div>
+
+            <div class="row text-center justify-content-center">
+                <h1 class="fw-bolder">START BOOTSTRAP</h1>
+                <div class="col-6 text-center d-flex align-items-center justify-content-center">
+                    <div class="line"></div>
+                    <i class="fa-solid fa-star fs-2"></i>
+                    <div class="line"></div>
                 </div>
+                <span class="fw-semibold fs-4 py-3">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
             </div>
         </div>
+       </section>
+    <!-- // SECTION START BOOTSTRAP // -->
 
-    </header>
+       <section class="white">
+        
+
+       </section>
+
+       <section class="green">
+
+       </section>
+
+       <section class="white">
+
+       </section>
+    </main>
     
 
 
