fit: add section portfolio

--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
     <main>
     <!-- SECTION START BOOTSTRAP -->
        <section class="green">
-        <div class="container-md">
+        <div class="container-fluid p-5">
             <div class="row d-flex justify-content-center">
-                <img class="col-2 p-4" src="./assets/img/avatar.svg" alt="avatar">
+                <figure class="text-center py-3">
+                    <img class="avatar" src="./assets/img/avatar.svg" alt="avatar">
+                </figure>
             </div>
 
             <div class="row text-center justify-content-center">
@@ -56,16 +58,65 @@
                     <i class="fa-solid fa-star fs-2"></i>
                     <div class="line"></div>
                 </div>
-                <span class="fw-semibold fs-4 py-3">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
+                <span class="fw-semibold fs-4">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
             </div>
         </div>
        </section>
     <!-- // SECTION START BOOTSTRAP // -->
 
+    <!-- SECTION PORTFOLIO -->
        <section class="white">
-        
+            <div class="row text-center justify-content-center py-5">
+                <h2 class="fw-bold fs-1">PORTFOLIO</h1>
+                <div class="col-6 text-center d-flex align-items-center justify-content-center py-3">
+                    <div class="line-1"></div>
+                    <i class="fa-solid fa-star fs-2"></i>
+                    <div class="line-1"></div>
+                </div>
 
+            <div class="container-fluid">
+                <div class="container-md">
+                    <div class="row justify-content-between">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <figure>
+                                <img class="portfolio" src="./assets/img/cabin.png" alt="">
+                            </figure>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <figure>
+                                <img class="portfolio" src="./assets/img/cake.png" alt="">
+                            </figure>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <figure>
+                                <img class="portfolio" src="./assets/img/circus.png" alt="">
+                            </figure>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <figure>
+                                <img class="portfolio" src="./assets/img/game.png" alt="">
+                            </figure>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <figure>
+                                <img class="portfolio" src="./assets/img/safe.png" alt="">
+                            </figure>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <figure>
+                                <img class="portfolio" src="./assets/img/submarine.png" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+            </div>
        </section>
+       <!-- // SECTION PORTFOLIO //  -->
 
        <section class="green">
 
