--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <i class="fa-solid fa-star fs-2"></i>
                     <div class="line"></div>
                 </div>
-                <span class="fw-semibold fs-4">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
+                <span class="fw-semibold fs-4 p-3">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</span>
             </div>
         </div>
        </section>
@@ -77,37 +77,37 @@
             <div class="container-fluid">
                 <div class="container-md">
                     <div class="row justify-content-between">
-                        <div class="col-12 col-md-6 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 p-2">
                             <figure>
                                 <img class="portfolio" src="./assets/img/cabin.png" alt="">
                             </figure>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 p-2">
                             <figure>
                                 <img class="portfolio" src="./assets/img/cake.png" alt="">
                             </figure>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 p-2">
                             <figure>
                                 <img class="portfolio" src="./assets/img/circus.png" alt="">
                             </figure>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 p-2">
                             <figure>
                                 <img class="portfolio" src="./assets/img/game.png" alt="">
                             </figure>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 p-2">
                             <figure>
                                 <img class="portfolio" src="./assets/img/safe.png" alt="">
                             </figure>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4">
+                        <div class="col-12 col-md-6 col-lg-4 p-2">
                             <figure>
                                 <img class="portfolio" src="./assets/img/submarine.png" alt="">
                             </figure>
@@ -118,12 +118,50 @@
        </section>
        <!-- // SECTION PORTFOLIO //  -->
 
+       <!-- SECTION ABOUT -->
        <section class="green">
+        <div class="row text-center justify-content-center py-5">
+            <h2 class="fw-bold fs-1">ABOUT</h1>
+                <div class="col-6 text-center d-flex align-items-center justify-content-center py-3">
+                    <div class="line"></div>
+                    <i class="fa-solid fa-star fs-2"></i>
+                    <div class="line"></div>
+        </div>
 
+        <div class="row justify-content-center">
+            <div class="col-sm-3 text-start py-2">
+                Freelancer is a free bootstrap theme created by Start Bootstrap.
+                The download includes the complete source files including HTML,
+                CSS, and JavaScript as well as optional LESS stylesheet for easy
+                customization.
+            </div>
+
+            <div class="col-sm-3 text-start py-2">
+                Wheter you're a student looking to showcase your
+                work, a professional looking to attract clients, or a 
+                graphic artist looking to share your projects, this
+                template is the perfect starting point!
+            </div>
+        </div>
+
+        <div class="row text-center justify-content-center">
+            <div class="col-1">
+                <div class="download-1 py-2 px-2">
+                    <i class="fa-solid fa-download fa-xl" style="color: #ffffff;"></i>
+                    <span class="fw-semibold fs-6">Download</span>
+                </div>
+            </div>
+        </div>
        </section>
+       <!-- // SECTION ABOUT // -->
 
        <section class="white">
-
+        <div class="row text-center justify-content-center py-5">
+            <h2 class="fw-bold fs-1">CONTACT ME</h1>
+                <div class="col-6 text-center d-flex align-items-center justify-content-center py-3">
+                    <div class="line-1"></div>
+                    <i class="fa-solid fa-star fs-2"></i>
+                    <div class="line-1"></div>
        </section>
     </main>
     
