--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
             <div class="container-fluid">
                 <div class="container-md">
                     <div class="row text-center py-4">
-                        <div class="col-12 col-md-6 col-lg-4 p-2">
+                        <div class="col-12 col-md-6 col-lg-4 py-4">
                             <h3 class="fw-semibold">LOCATION</h3>
                             <span class="fw-semibold fs-5">2215 John Daniel Drive Clark , MO <br>
                             54243</span>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4 p-2">
+                        <div class="col-12 col-md-6 col-lg-4 py-4">
                             <h3 class="fw-semibold">AROUND THE WEB</h3>
                             <div class="row justify-content-center">
                                 <div class="social">
@@ -222,7 +222,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4 p-2">
+                        <div class="col-12 col-md-6 col-lg-4 py-4">
                             <h3 class="fw-semibold">ABOUT FREELANCER</h3>
                             <span class="fw-semibold fs-5"> Freelance is a free to use, open source
                                 Bootstrap theme created by <span class="green-1">Start <br> Bootstrap</span>.
