--- a/index.html
+++ b/index.html
@@ -20,26 +20,31 @@
 </head>
 <body>
 
-    <!-- SECTION HEADER -->
-
+    <!-- SECTION NAVBAR -->
     <header>
-        <div class="container">
-            <div class="row d-flex justify-content-between">
-
-                <div class="col fw-bolder fs-4 p-3">START BOOTSTRAP</div>
-
-                <div class="col text-end d-none d-sm-block">
-                    <div class="container-fluid d-flex mx-5">
-                        <div class="col-3 text-center p-4 fw-bolder">PORTFOLIO</div>
-                        <div class="col-3 text-center p-4 fw-bolder">ABOUT</div>
-                        <div class="col-3 text-center p-4 fw-bolder">CONTACT</div>
-                    </div>
-                </div> 
+        <nav class="navbar navbar-expand-lg bg-nav">
+            <div class="container-fluid">
+              <a class="navbar-brand text-light fw-bold ms-5 fs-3" href="#">START BOOTSTRAP</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end me-5 fs-5 fw-bold" id="navbarNav">
+                <ul class="navbar-nav navbar-collapse-xs">
+                  <li class="nav-item">
+                    <a class="nav-link text-light" href="#">HOME</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-light" href="#">PORTFOLIO</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-light" href="#">CONTACT</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </div>  
+          </nav>
     </header>
-
-    <!-- // SECTION HEADER // -->
+    <!-- // SECTION NAVBAR // -->
 
     <main>
     <!-- SECTION START BOOTSTRAP -->
