--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
     <!-- SECTION NAVBAR -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-nav">
+        <nav class="navbar navbar-expand-sm bg-nav">
             <div class="container-fluid">
               <a class="navbar-brand text-light fw-bold ms-5 fs-3" href="#">START BOOTSTRAP</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end me-5 fs-5 fw-bold" id="navbarNav">
-                <ul class="navbar-nav navbar-collapse-xs">
+                <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link text-light" href="#">HOME</a>
                   </li>
