--- a/index.html
+++ b/index.html
@@ -172,71 +172,55 @@
                     </div>
             </div>
 
-            <div class="row text-center justify-content-center py-5">
-                    <div class="col-8 text-start">
-                        <p class="fs-5 fw-medium">Name</p>
-                        <hr>
-                    </div>
-
-                    <div class="col-8 text-start">
-                        <p class="fs-5 fw-medium">Email Address</p>
-                        <hr>
-                    </div>
-
-                    <div class="col-8 text-start">
-                        <p class="fs-5 fw-medium">Phone Number</p>
-                        <hr>
-                    </div>
-
-                    <div class="col-8 text-start">
-                        <p class="fs-5 fw-medium">Message</p>
-                        <hr class="line-message">
-                    </div>
-
-                    <div class="col-8 text-start">
-                        <div class="send text-center">
-                            <span class="fw-normal fs-5">Send</span>
-                        </div>
-                    </div> 
+            <div class="row text-center justify-content-center py-2">
+                <form class="row w-75 mx-auto" action="">
+                    <input class="border border-0 border-bottom py-3" placeholder="Name" type="text" name="" id="">
+                    <input class="border border-0 border-bottom py-3" placeholder="Email Address" type="email" name="" id="">
+                    <input class="border border-0 border-bottom py-3" placeholder="Phone Number" type="number" name="" id="">
+                    <textarea class="border border-0 border-bottom py-3" name="" id="" placeholder="Message" cols="30" rows="10"></textarea>
+                </form>    
             </div>
+            <div class="row-75 mx-auto"> 
+                <button type="submit" class="btn-me">Send</button>
+            </div>
+           
         </section>
         <!-- // SECTION CONTACT ME // -->
 
         <!-- SECTION SOCIAL -->
         <section class="gray">
             <div class="container-fluid">
-                <div class="container-md">
-                    <div class="row text-center py-4">
-                        <div class="col-12 col-md-6 col-lg-4 py-4">
-                            <h3 class="fw-semibold">LOCATION</h3>
-                            <span class="fw-semibold fs-5">2215 John Daniel Drive Clark , MO <br>
-                            54243</span>
-                        </div>
+                <div class="row text-center py-4">
+                    <div class="col-12 col-md-12 col-lg-4 py-4">
+                        <h3 class="fw-semibold">LOCATION</h3>
+                        <span class="fw-semibold fs-5">2215 John Daniel Drive Clark , MO <br>
+                        54243</span>
+                    </div>
 
-                        <div class="col-12 col-md-6 col-lg-4 py-4">
-                            <h3 class="fw-semibold">AROUND THE WEB</h3>
-                            <div class="row justify-content-center">
-                                <div class="social">
-                                    <div class="justify-content-center">
-                                        <i class="fa-brands fa-facebook-f fa-lg px-3" style="color: #ffffff;"></i>
-                                        <i class="fa-brands fa-google-plus-g fa-lg px-3" style="color: #ffffff;"></i>
-                                        <i class="fa-brands fa-x-twitter fa-lg px-3" style="color: #ffffff;"></i>
-                                        <i class="fa-brands fa-linkedin-in fa-lg px-3" style="color: #ffffff;"></i>
-                                    </div>
+
+                    <div class="col-12 col-md-12 col-lg-4 py-4">
+                        <h3 class="fw-semibold">AROUND THE WEB</h3>
+                        <div class="row justify-content-center">
+                            <div class="social">
+                                <div class="justify-content-center">
+                                    <i class="fa-brands fa-facebook-f fa-lg px-3" style="color: #ffffff;"></i>
+                                    <i class="fa-brands fa-google-plus-g fa-lg px-3" style="color: #ffffff;"></i>
+                                    <i class="fa-brands fa-x-twitter fa-lg px-3" style="color: #ffffff;"></i>
+                                    <i class="fa-brands fa-linkedin-in fa-lg px-3" style="color: #ffffff;"></i>
                                 </div>
                             </div>
                         </div>
+                    </div>
 
-                        <div class="col-12 col-md-6 col-lg-4 py-4">
-                            <h3 class="fw-semibold">ABOUT FREELANCER</h3>
-                            <span class="fw-semibold fs-5"> Freelance is a free to use, open source
-                                Bootstrap theme created by <span class="green-1">Start <br> Bootstrap</span>.
-                            </span>
-                        </div>
+                    <div class="col-12 col-md-12 col-lg-4 py-4">
+                        <h3 class="fw-semibold">ABOUT FREELANCER</h3>
+                        <span class="fw-semibold fs-5"> Freelance is a free to use, open source
+                            Bootstrap theme created by <span class="green-1">Start <br> Bootstrap</span>.
+                        </span>
                     </div>
                 </div>
             </div>
-        </section>
+     </section>
         <!-- // SECTION SOCIAL // -->
 
         <!-- SECTION FOOTER -->
