fix: adjust section social

--- a/index.html
+++ b/index.html
@@ -189,20 +189,20 @@
 
         <!-- SECTION SOCIAL -->
         <section class="gray">
-            <div class="container-fluid">
-                <div class="row text-center py-4">
-                    <div class="col-12 col-md-12 col-lg-4 py-4">
+            <div class="container-md">
+                <div class="row text-center">
+                    <div class="col-12 col-md-4 col-lg-4 py-4">
                         <h3 class="fw-semibold">LOCATION</h3>
                         <span class="fw-semibold fs-5">2215 John Daniel Drive Clark , MO <br>
                         54243</span>
                     </div>
 
 
-                    <div class="col-12 col-md-12 col-lg-4 py-4">
+                    <div class="col-12 col-md-4 col-lg-4 py-4">
                         <h3 class="fw-semibold">AROUND THE WEB</h3>
-                        <div class="row justify-content-center">
-                            <div class="social">
-                                <div class="justify-content-center">
+                        <div class="row text-center">
+                            <div class="social pt-1">
+                                <div class="d-flex justify-content-center">
                                     <i class="fa-brands fa-facebook-f fa-lg px-3" style="color: #ffffff;"></i>
                                     <i class="fa-brands fa-google-plus-g fa-lg px-3" style="color: #ffffff;"></i>
                                     <i class="fa-brands fa-x-twitter fa-lg px-3" style="color: #ffffff;"></i>
@@ -212,11 +212,12 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-12 col-lg-4 py-4">
+                    <div class="col-12 col-md-4 col-lg-4 py-4">
                         <h3 class="fw-semibold">ABOUT FREELANCER</h3>
-                        <span class="fw-semibold fs-5"> Freelance is a free to use, open source
-                            Bootstrap theme created by <span class="green-1">Start <br> Bootstrap</span>.
-                        </span>
+                        <div class="row text-center">
+                            <span class="fw-semibold fs-5"> Freelance is a free to use, open source
+                            Bootstrap theme created by <span class="green-1">Start <br> Bootstrap</span>.</span>
+                        </div>    
                     </div>
                 </div>
             </div>
